# homesoftserver

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  README.md  build_and_compile.bat  build_and_compile.sh  compile.sh  configure.ac  hsserver.cbp  usserver.cbp  usserver.layout
bug_patches/: 0001-Introducing-atomicity-violation.patch  0001-Introducing-deadlock.patch  0001-Introducing-order-violation.patch  0001-Introducing-race-condition.patch
include/: Makefile.am  camera.h  command_io.h  commands.h  delay.h  device_core.h  devices.h  hsserver.h  inspection.h  logs.h  sensor.h  usserver.h
rdao_model_intances/: hss.mdl  hss_av.mdl  hss_dl.mdl  hss_ov.mdl  hss_rc.mdl
src/: Makefile.am  camera.c  command_io.c  devices.c  hsserver.c  inspection.c  logs.c  sensor.c  usserver.c
